--- a/Style/style.css
+++ b/Style/style.css
@@ -1,3 +1,12 @@
 div h2{
-    text-decoration-line: ;
+    display: inline-block;
+    margin: 10px;
+    padding: 0px;
+}
+img {
+    height: 100px;
+    margin: 30px;
+}
+div a{
+        margin-left: 0px;
 }
